--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,12 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
